-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 19, 21, 22
-
Component/s: tools
-
b16
-
generic
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8317479 | 21.0.2 | Goetz Lindenmaier | P3 | Resolved | Fixed | b02 |
| JDK-8316459 | 17.0.10-oracle | Alexey Semenyuk | P3 | Resolved | Fixed | b01 |
| JDK-8317884 | 17.0.10 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
The following Java program and jpackage command create an app-image which launches multiple exe's on Windows 10. This does not happen before JDK 17. The same code and command work as expected on JDK 16, resulting in a single instance of Main.exe in the Task Manager Details.
import javax.swing.*;
public class Main {
public static void main(String[] args) {
JDialog dialog = new JDialog();
dialog.setVisible(true);
}
}
jpackage --type app-image --input jpackage_test_jar --dest install/tmp --main-jar jpackage_test.jar --main-class Main
REGRESSION : Last worked in version 16
FREQUENCY : always
- backported by
-
JDK-8316459 JPackage app-image exe launches multiple exe's in JDK 17+
-
- Resolved
-
-
JDK-8317479 JPackage app-image exe launches multiple exe's in JDK 17+
-
- Resolved
-
-
JDK-8317884 JPackage app-image exe launches multiple exe's in JDK 17+
-
- Resolved
-
- causes
-
JDK-8365790 Shutdown hook for application image does not work on Windows
-
- Resolved
-
- relates to
-
JDK-8325203 System.exit(0) kills the launched 3rd party application
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/179c60f9
-
Commit
openjdk/jdk21u/610f1644
-
Commit
openjdk/jdk/dcea9bf0
-
Review
openjdk/jdk17u-dev/1859
-
Review
openjdk/jdk21u/219
-
Review
openjdk/jdk/15690