8301247: JPackage app-image exe launches multiple exe's in JDK 17+

Reviewed-by: lucy
Backport-of: dcea9bf087c87548d9caa899c52e95d17478da22